k8s/tests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: echo
  namespace: default
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
  serviceName: echo
