k8s/tests/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress
  namespace: fencing-agent
spec:
  #endpointSelector: {}
  endpointSelector:
    matchLabels:
      killme: "true"
  egress:
    - {}
